# AAAIDE

./: README.md  pyproject.toml  requirement.txt
agentcards/: data_eng_agent_card.json
core/: agent.py  healthcare-data-discovery-agent.py  prompts.py
core/agentexecutors/: data_eng_agent_executor.py
core/agents/: data_eng_requirements_agent.py
core/subagents/: __init__.py  extract_datasource_agent.py
core/tools/: data_discovery_tool.py
core/utils/: __init__.py  data_discovery_utils.py
orchestration/: agent_registry.py
tests/: test_agents.py
